--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Database
 /data/database.sqlite
-/data/database.sqlite.bak
+/data/database.sqlite.old
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
