--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Database
 /data/database.sqlite
 /data/database.sqlite.old
+/data/*.json.gz
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
